--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -56,7 +56,7 @@
 </section>
 
 <!-- Three column grid -->
-<section id="three-column-grid" class="content">
+<section id="three-column-grid" class="content-home">
   <div class="container">
     <div class="row">
 
@@ -86,7 +86,7 @@
 </section>
 
 <!-- Latest arrivals / changed to featured product -->
-<section id="arrivals" class="content">
+<section id="arrivals" class="content-home">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
