add featured column to products db table

--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -56,7 +56,7 @@ h1 {
 .btn-outline-success:hover {
   color: $iron;
   background-color: $black;
-  border-color: $iron;
+  border-color: $black;
 
 }
 
