--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -6,7 +6,7 @@
         <p>We have the hippest bikes in town.</p>
         <p>Come and <%= link_to "get them", simple_pages_contact_path %>!</p>
         <h3>And, of course we like kitten too:</h3>
-        <%= image_tag("http://placekitten.com/400/300", class: "img-responsive") %>
+        <%= image_tag("http://placekitten.com/400/300", class: "img-fluid rounded") %>
       </div>
     </div>
   </div>
