--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,7 +30,10 @@
     <div class="row">
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
         <%= link_to 'Back', products_path, class: "btn btn-outline-success my-2 my-sm-0" %>
-        <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-outline-success my-2 my-sm-0" %>
+        <% if signed_in? && current_user.admin? %>
+            <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-outline-success my-2 my-sm-0" %>
+          <% end %>
+        
       </div>
     </div>
   </div>
