add tooltips for login and logout icon

--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -20,3 +20,12 @@ $(document).on('turbolinks:load', function(){
 
 
 });
+
+// Tooltips on log in and log out icon in nav bar
+$(function () {
+  $('#item1').tooltip();
+});
+
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip();
+});
