--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,6 +4,10 @@
 
       <%= render 'product', product: @product %>
 
+      <%= form_with(url: '/payments/create') do |form| %>
+        <%= render partial: "shared/stripe_checkout_button" %>
+      <% end %>
+
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
         <% if @comments.exists? %>
           <h4>Average Rating:</h4>
@@ -38,6 +42,8 @@
     </div>
   </div>
 </section>
+
+<!-- Comments -->
 
 <section>
   <div class="container">
