Set up elevate zoom for products images

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -4,7 +4,7 @@
   <%= link_to product_path(product.id) do %>
   <div id="<%=product.id.to_s%>" class="product element-shadow" onmouseover='<%="mouseOver" + product.id.to_s + "()" %>' onmouseout='<%="mouseOut" + product.id.to_s + "()" %>'>
    <h3><%= product.name %></h3>
-    <%= image_tag(product.image_url, class: "img-fluid") %>
+    <%= image_tag(product.image_url, data_zoom_image: "product.image_url", class: "img-fluid img-zoom") %>
     <p><%= product.description %></p>
     <p><strong>Colour: </strong><%= product.colour %></p>
     <strong class="custom-text-color">$<%= product.price %></strong>
