--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -1,7 +1,8 @@
 // contains sited-wide functions
 
-$(document).on('turbolinks:load', function(){
-    $('.rating').raty({
+// Raty plugin
+var refreshRating = function() {
+  $('.rating').raty({
       starHalf: '<%= asset_path 'star-half.png' %>',
       starOff: '<%= asset_path 'star-off.png' %>',
       starOn: '<%= asset_path 'star-on.png' %>',
@@ -17,11 +18,14 @@ $(document).on('turbolinks:load', function(){
       return $(this).attr('data-score');
     }
   });
+};
 
-  $(".img-zoom").elevateZoom();
+$(document).on('turbolinks:load', function(){
+refreshRating();
 
-
+$(".img-zoom").elevateZoom();
 });
+
 
 // Tooltips on log in and log out icon in nav bar
 $(function () {
