--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,9 +1,9 @@
 <% if signed_in? %>
   <hr>
-  <h4>Add a review:</h4>
+  <h4 id="sw">Add a review:</h4>
 
 
-  <%= form_for([@product, @product.comments.build]) do |f| %>
+  <%= form_for([@product, @product.comments.build], id: "new_comment", remote: true) do |f| %>
 
   <div class="form-group">
     <div class="field">
