Add Russian doll caching for products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,9 @@
       </div>
     </div>
     <div class="row">
-      <%= render @products %>
+      <% cache (cache_key_for_products) do %>
+        <%= render @products %>
+      <% end %>
     </div>
   </div>
 </section>
