--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -51,6 +51,7 @@
     <div class="row">
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
         <% if @comments.exists? %>
+          <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
           <%= render 'comments' %>
           <div class="flickr_pagination">
             <%= will_paginate @comments %>
