--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <section class="content">
   <div class="container">
-    <div class="row">
+    <div class="row" data-product-id="<%= @product.id %>">
 
       <%= render 'product', product: @product %>
 
