--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,11 +4,6 @@
 
       <%= render 'product', product: @product %>
 
-      <%= form_with(url: '/payments/create') do |form| %>
-        <%= render partial: "shared/stripe_checkout_button" %>
-        <%= hidden_field_tag(:product_id, @product.id) %>
-      <% end %>
-
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
         <% if @comments.exists? %>
           <h4>Average Rating:</h4>
@@ -33,12 +28,17 @@
     </div>
     
     <div class="row">
-      <div class="product-col col-sm-12 col-md-4 col-lg-4">
+      <div class="product-col col-sm-12 col-md-2 col-lg-2">
         <%= link_to 'Back', products_path, class: "btn btn-outline-success my-2 my-sm-0" %>
         <% if signed_in? && current_user.admin? %>
             <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-outline-success my-2 my-sm-0" %>
           <% end %>
-        
+      </div>
+      <div class="product-col col-sm-12 col-md-2 col-lg-2">
+        <%= form_with(url: '/payments/create') do |form| %>
+          <%= render partial: "shared/stripe_checkout_button" %>
+          <%= hidden_field_tag(:product_id, @product.id) %>
+        <% end %>
       </div>
     </div>
   </div>
